src/tests/testfiles/binary-operators/types-4.txt
Error at 2:9: Comparison operator operands need to be of same type (have float rvalue and int rvalue)
1.0 != 3;
    ^
